--- a/conv_net_comparison.ipynb
+++ b/conv_net_comparison.ipynb
@@ -1073,7 +1073,7 @@
    "id": "98e9e39a",
    "metadata": {},
    "source": [
-    "### Wonderful! It correctly sees the it is indeed Pepsi Original."
+    "### Wonderful! It correctly sees that it is indeed Pepsi Original."
    ]
   }
  ],
